fix: set z-index on topbar
There was an issue, perhaps due to the opacity change on list items,
which could cause translucent items to render on top of the topbar
while scrolling.

Setting the z-index on the top bar seems to resolve this, at least in
firefox.

--- a/input.scss
+++ b/input.scss
@@ -32,6 +32,7 @@ body {
 
 .topbar {
   position: fixed;
+  z-index: 10;
   display: flex;
   flex-wrap: nowrap;
   justify-content: space-between;
